Aggiornato metodo deprecato